2014-08-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* obsolete/mouse-sel.el (mouse-sel-mode): Use add/remove-function.
	(mouse-sel--ignore): New function.
	(mouse-sel-has-been-enabled, mouse-sel-original-bindings)
	(mouse-sel-original-interprogram-cut-function)
	(mouse-sel-original-interprogram-paste-function): Remove.

2014-08-13  Eric S. Raymond  <esr@thyrsus.com>

	* vc/vc.git.el (vc-git-find-file-hook): New function.
	Adds support for calling smerge on a conflicted file, and calling
	"git add" when there are no longer conflict markers in a saved file.
	This is a completed version of Rüdiger Sonderfeld's proposal.
	(vc-git-conflicted-files): New function.
	Integrate Rüdiger Sonderfeld's code for detecting conflicted files
	using a status listing.  Useful in itself and a step towards better
	smerge support.

2014-08-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mpc.el (mpc-reorder): Don't bother splitting the "active"s elements
	to the first part if they're the same as the selection.

2014-08-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* image-mode.el (image-transform-reset): New command and menu item.
	(image-mode-map): Rearrange the menu items to put presumably more
	obscure items at the end.

2014-08-12  Juri Linkov  <juri@jurta.org>

	* vc/vc-annotate.el (vc-annotate-background-mode):
	Use `with-demoted-errors' instead of `ignore-errors'.  (Bug#18189)

2014-08-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (out-of-memory-warning-percentage): Turn it off by default.

2014-08-11  Sam Steingold  <sds@gnu.org>

	* textmodes/sgml-mode.el (sgml-validate-command): Set depending on
	the presence of known validators (tidy, (o)nsgmls).

2014-08-11  Ulf Jasper  <ulf.jasper@web.de>

	Newsticker: introduce `newsticker-treeview-date-format'. (Bug#17227)

	* net/newst-treeview.el (newsticker-treeview-date-format): New.
	(newsticker--treeview-list-add-item): Use `newsticker-treeview-date-format'.

2014-08-11  Glenn Morris  <rgm@gnu.org>
